samples/_failures_safe/1761369116_03a569_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0a3d57f.c: In function ‘main’:
./samples/SAFE/__tmp_d0a3d57f.c:169:15: error: expected ‘;’ at end of input
  169 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_d0a3d57f.c:169:9: error: expected declaration or statement at end of input
  169 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_d0a3d57f.c:169:9: error: expected declaration or statement at end of input
